--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="xwang@hsph.harvard.edu" />
 
-<meta name="date" content="2022-09-09" />
+<meta name="date" content="2022-09-10" />
 
 <title>Xuan Wang</title>
 
@@ -60,7 +60,7 @@ code span.ot { color: #007020; }
 <div class="inner">
 <h1 class="title toc-ignore">Xuan Wang</h1>
 <h3 class="author">xwang<span class="math inline">\(@\)</span>hsph.harvard.edu</h3>
-<h3 class="date">2022-09-09</h3>
+<h3 class="date">2022-09-10</h3>
 </div>
 </header>
 
@@ -79,9 +79,9 @@ Statistics from Chinese Academy of Sciences.</p>
 <p>My research interests include statistical methods for surrogate
 validation, causal inference and missing data analysis, complex survival
 data analysis, supervised learning, semi-supervised learning, federated
-transfer learning, etc. I also make great effect in applying these
-methods to analyze real world data, especially electronic health records
-(EHR) data.</p>
+transfer learning, etc. Meanwhile, I make great effect in applying these
+noval statistical methods to analyze real world data, especially
+electronic health records (EHR) data.</p>
 <div id="publication" class="section level2">
 <h2>PUBLICATION</h2>
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=sH8TVSoAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">google
@@ -128,6 +128,25 @@ centers without sharing patient-level informa- tion. An interactive
 online <a href="https://shiny.parse-health.org/SurvMaximin/">shiny
 app</a> has been implemented to perform the proposed algorithm with user
 input data.</p>
+</div>
+<div id="teaching" class="section level2">
+<h2>TEACHING</h2>
+<ul>
+<li><p>TA 2021, BST 244: Analysis of Failure Time Data<br />
+Department of Biostatistics, Harvard University<br />
+Certificate of Distinction in Teaching</p></li>
+<li><p>Teacher</p>
+<ul>
+<li>2018-2019, Probability and Statistics<br />
+</li>
+<li>2018, Sampling Survey<br />
+</li>
+<li>2018, Probability and Statistics<br />
+</li>
+<li>2017-2018, Probability<br />
+Undergraduate course, Zhejiang University</li>
+</ul></li>
+</ul>
 <!-- You can also write math expressions, e.g. $Y = X\beta + \epsilon$, -->
 <!-- footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`. -->
 <!-- ```{r, echo=FALSE, results='asis'} -->
