--- a/index.html
+++ b/index.html
@@ -132,10 +132,13 @@ input data.</p>
 <div id="teaching" class="section level2">
 <h2>TEACHING</h2>
 <ul>
-<li><p>TA 2021, BST 244: Analysis of Failure Time Data<br />
+<li>TA
+<ul>
+<li>2021, BST 244: Analysis of Failure Time Data<br />
 Department of Biostatistics, Harvard University<br />
-Certificate of Distinction in Teaching</p></li>
-<li><p>Teacher</p>
+Certificate of Distinction in Teaching</li>
+</ul></li>
+<li>Teacher
 <ul>
 <li>2018-2019, Probability and Statistics<br />
 </li>
